# tank-game

./: Cargo.toml  README.md  package-lock.json  tank-game.code-workspace
documentation/: component_diagram_game.puml  context.puml  documentation.md  game.md
game/: Cargo.toml
game/assets/: map.txt
game/src/: components.rs  controllers.rs  error.rs  game.rs  game_state.rs  lib.rs  main.rs  player.rs  players_connector.rs  remote_communicator.rs  renderer.rs  room_code.rs  server_communication.rs  server_communicator.rs  server_connection.rs  signal.rs  startup.rs  state.rs  systems.rs
game/src/remotes/: messages.rs
game/src/render/: renderer.rs
game/src/state/: game_state.rs  map.rs  mod.rs
remote/: .env  index.js  (+10 more)
server/: .env  Cargo.toml  Dockerfile  configuration.yaml  docker-compose.yml
server/.sqlx/: query-08c8b6e738323d6fdc223a34487ea9cdd3603153ec18e99e2bdf308a8cc67ecd.json  query-24b58faf58aa48bd914176dcf0bf20a953662bb87bdcfbc0a4a77a7adb54abe8.json  query-bc4ca64ec79f5a2a1bcb0633137e5d91696940d92b2f399915385090f85cf556.json  query-effe77cc2b774257eb23d295f5c7ee3f0ada4db5485f17c13a23da7bb93cbd29.json
server/manifests/: database.yaml  deployment.yaml  server-deployment.yaml  server-service.yaml  server.yaml  service.yaml
server/migrations/: 20230212230400_create_user_table.sql
server/script/: init_db.sh
server/src/: configuration.rs  games_api.rs  games_communication.rs  lib.rs  main.rs  result.rs  startup.rs
server/src/authentication/: password.rs
server/src/repository/: account_repository.rs  mod.rs  repository.rs
server/src/route/: game.rs  login.rs  mod.rs
server/src/route/user/: registration.rs
(+82 files in other folders)
