[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcode = { version = "0.12" }
specs = "0.18"
specs-derive = "0.4"


[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["image"]