[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcode = { version = "0.12" }
specs = "0.18"
specs-derive = "0.4"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
webrtc = "0.7"
serde_json = "1"
serde = "1"
base64 = "0.21"
tokio-tungstenite = "*"
futures-util = "0.3"
futures-channel = "0.3"
async-stream = "0.3"


[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["image"]